Lint code, allow specifiy cpu threshold to scale

--- a/dev.tfvars.example
+++ b/dev.tfvars.example
@@ -63,6 +63,9 @@ max_size = 1
 min_size = 1
 desired_capacity = 1
 
+high_cpu_threshold = 80
+low_cpu_threshold = 10
+
 # ---------------------------------------------------------------------------------------------------------------------
 # Load Balancer
 # ---------------------------------------------------------------------------------------------------------------------
